--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@moonvy/app-core": "*",
         "@vueuse/core": "^4.7.0",
         "axios": "1.3.4",
+        "chatgpt": "^5.2.2",
         "copy-image-clipboard": "^2.1.2",
         "cors": "2.8.5",
         "crypto-js": "4.1.1",
@@ -44,8 +45,11 @@
         "floating-vue": "1.0.0-beta.19",
         "fzz": "*",
         "html-to-image": "1.11.11",
+        "http-proxy-agent": "^5.0.0",
+        "https-proxy-agent": "^5.0.1",
         "jiti": "1.16.0",
         "lodash": "4.17.21",
+        "node-fetch": "^3.3.1",
         "npm-run-all": "4.1.5",
         "postcss": "8.4.21",
         "tencentcloud-sdk-nodejs": "4.0.578",
